fix tap on mobile brouser for scroll

--- a/app/[dogs]/dogsPage.scss
+++ b/app/[dogs]/dogsPage.scss
@@ -47,35 +47,3 @@
     }
   }
 }
-
-@media (max-width: 575.98px) {
-  .dogs {
-    &__items {
-      .items {
-        &__item {
-          width: 150px;
-          height: 150px;
-          .item {
-            &__title {
-              font-size: 20px;
-              line-height: 20px;
-            }
-          }
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 345px) {
-  .dogs {
-    &__items {
-      .items {
-        &__item {
-          width: 300px;
-          height: 300px;
-        }
-      }
-    }
-  }
-}
