--- a/components/headerDods/headerDogs.scss
+++ b/components/headerDods/headerDogs.scss
@@ -15,7 +15,6 @@
   }
   a {
     padding: 5px 10px;
-    text-align: center;
     &:hover {
       transform: scale(1.05);
     }
